# robot_collision_checking

./: .gitignore  CMakeLists.txt  README.md  package.xml  ros_collision_checking.kdev4
.kdev4/: ros_collision_checking.kdev4
cmake/: FindFCL.cmake
include/robot_collision_checking/: fcl_interface.h
include/ros_collision_checking/: .fcl_interface.h.kate-swp  fcl_interface.h
launch/: ros_fcl.launch  ros_fcl_octomap_test.launch
rviz/: fcl_test.rviz
scripts/: create_cloud_xyzrgb.py
src/: .fcl_interface.cpp.kate-swp  fcl_interface.cpp  fcl_interface_test.cpp  static_fcl_interface.cpp  test_file.cpp
tests/: test_fcl.cpp  test_file.cpp  test_inter_fcl.cpp  test_octo.cpp  test_octo_fcl.cpp
